[package]
name = "CurrencyExchange"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
redis = { version = "0.29.1", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
